# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  20 Jul 2005; Brian Harring <ferringb@gentoo.org> bin/ebuild*.{sh,lib}:
  Harring broke cvs.  If people ignored the warnings, I'll fix it till the 
  next time changes in rewrite cause it to break again.

  04 Jul 2005; Mike Frysinger <vapier@gentoo.org>
  bin/ebuild-default-functions.sh:
  Fix gnuconfig find expression #93363 by TGL.

  23 Jun 2005; Mike Frysinger <vapier@gentoo.org>
  bin/ebuild-default-functions.sh:
  Update the scanelf RUNPATH check to abort on null paths.

  17 Jun 2005; Mike Frysinger <vapier@gentoo.org> bin/repoman:
  Report exit status if gpg failed to return with 0.

  14 Jun 2005; Marius Mauch <genone@gentoo.org> man/portage.5:
  Remove references to non-existant $PORTDIR/profiles/use.mask.

  13 Jun 2005; Mike Frysinger <vapier@gentoo.org> bin/ebuild.sh:
  Use the %p output modifier instead of %F so we don't have to update the
  output by removing all the $D references.

  06 Jun 2005; Jason Stubbs <jstubbs@gentoo.org> bin/dispatch-conf
  pym/dispatch_conf.py: Brought forward updates in stable.

  29 May 2005; Mike Frysinger <vapier@gentoo.org>
  bin/ebuild-default-functions.sh:
  Add some banner messages to the compile / package steps.

  29 May 2005; Mike Frysinger <vapier@gentoo.org> bin/prepall:
  Add a QA check to see if PORTAGE_TMPDIR leaked into libtool scripts (*.la).

  24 May 2005; Mike Frysinger <vapier@gentoo.org>
  bin/ebuild-default-functions.sh:
  Allow src_install() to abort if scanelf locates questionable binaries and 
  user has 'stricter' in their FEATURES.

  23 May 2005; Mike Frysinger <vapier@gentoo.org> 
  bin/ebuild-default-functions.sh: